# jeopardy

./: .gitignore  README.md  docker-compose-local.yaml  docker-compose.yml  main.py  pyproject.toml
ingester/: README.md  ingest_data.py
jeopardy/: observability.py
jeopardy/ai/: oracle.py
jeopardy/api/: Dockerfile  main.py  models.py
jeopardy/db/: __init__.py  db.py  models.py
jeopardy/ingester/: Dockerfile  ingest_data.py  models.py
tests/: __init__.py  conftest.py  test_api.py
